--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build https://pakistanicontextreducer.surge.sh/ --token ${{secrets.TOKEN}}
+      run: surge ./build https://pakistanicontextreducer.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
